Fix z-index issue with toolbarMenu and Modal

--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -8,6 +8,7 @@
    align-items: center;
    height: 100%;
    width: 100%;
+   z-index: 1001;
 }
 
 .modal {
